--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,7 +1,16 @@
 <h1>Hola mi primer proyecto</h1>
-<h2>{{welcome}}</h2>
+<h2>{{ welcome }}</h2>
 <ul>
-    <li *ngFor="let task of tasks">
-        {{task}}
-    </li>
+  <li *ngFor="let task of tasks">
+    {{ task }}
+  </li>
 </ul>
+<hr />
+<h2>{{ "Hola".repeat(4) }}</h2>
+<p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
+<p>Hola soy {{ name }} y mi edad es {{ age }}</p>
+<hr />
+<img [src]="person.avatar" alt="" />
+<input type="number" [value]="person.age" />
+<button [disabled]="disable">Click me</button>
+<p>person: {{ person.name }}</p>
