--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -2,7 +2,7 @@
   <h1>Hola mi primer proyecto</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks">
+    <li *ngFor="let task of tasks()">
       {{ task }}
     </li>
   </ul>
@@ -24,6 +24,10 @@
   <input type="text" [value]="person.name" (keydown)="keydownHandler($event)" />
   <p>(keydown shift)</p>
   <input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()" />
+  <ul>
+    <p>Total: {{ tasks().length }}</p>
+    <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
+  </ul>
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)" />
   <p>Name: {{ name() }}</p>
