--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -11,19 +11,31 @@
   <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
   <p>Hola soy {{ name() }} y mi edad es {{ age }}</p>
   <hr />
-  <img [src]="person.avatar" alt="" />
-  <input type="number" [value]="person.age" />
+  <img [src]="person().avatar" alt="" />
+  <input type="number" [value]="person().age" />
   <button [disabled]="disable">Click me</button>
-  <p>person: {{ person.name }}</p>
+  <p>person: {{ person().name }}</p>
   <hr />
   <button (click)="clickHandler()">Click me</button>
   <button ((dblclick))="clickHandler()">Double me</button>
   <p>(change)</p>
-  <input type="number" [value]="person.age" (change)="changeHandler($event)" />
+  <input
+    type="number"
+    [value]="person().age"
+    (change)="changeHandler($event)"
+  />
   <p>(keydown)</p>
-  <input type="text" [value]="person.name" (keydown)="keydownHandler($event)" />
+  <input
+    type="text"
+    [value]="person().name"
+    (keydown)="keydownHandler($event)"
+  />
   <p>(keydown shift)</p>
-  <input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()" />
+  <input
+    type="text"
+    [value]="person().name"
+    (keydown.shift.t)="clickHandler()"
+  />
   <ul>
     <p>Total: {{ tasks().length }}</p>
     <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
@@ -31,4 +43,12 @@
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)" />
   <p>Name: {{ name() }}</p>
+  <hr />
+  <div *ngIf="1 === 1">My contend</div>
+  <div *ngIf="name() === 'Edgardo'">My contend</div>
+  <input type="number" [value]="person().age" (change)="changeAge($event)" />
+  <div *ngIf="person().name === 'Edgardo' && person().age > 18; else elseBlock">
+    Soy edgardo y soy mayor de edad
+  </div>
+  <ng-template #elseBlock> Soy nicolas y soy menor de edad </ng-template>
 </div>
