--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,10 @@
     <!-- This section should be hidden by default and shown when there are todos -->
     <section class="main">
       <ul class="todo-list">
-        <li *ngFor="let task of tasks(); index as i">
+        <li
+          [class.completed]="task.completed"
+          *ngFor="let task of tasks(); index as i"
+        >
           <div class="view">
             <input
               class="toggle"
@@ -29,14 +32,6 @@
             <button class="destroy" (click)="deleteTask(i)"></button>
           </div>
           <input class="edit" value="Buy a unicorn" />
-        </li>
-        <li class="completed">
-          <div class="view">
-            <input class="toggle" type="checkbox" checked />
-            <label>Learn JavaScript</label>
-            <button class="destroy"></button>
-          </div>
-          <input class="edit" value="Learn JavaScript" />
         </li>
         <!--
         <li>
