--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,8 +18,10 @@
     <section class="main">
       <ul class="todo-list">
         <li
-          [class.completed]="task.completed"
           *ngFor="let task of tasks(); index as i"
+          [class.completed]="task.completed"
+          (dblclick)="updateTaskedEditingMode(i)"
+          [class.editing]="task.editing"
         >
           <div class="view">
             <input
@@ -31,7 +33,11 @@
             <label>{{ task.title }}</label>
             <button class="destroy" (click)="deleteTask(i)"></button>
           </div>
-          <input class="edit" value="Buy a unicorn" />
+          <input
+            class="edit"
+            (keydown.enter)="updateTaskText(i, $event)"
+            [value]="task.title"
+          />
         </li>
         <!--
         <li>
